# ats2-hashmap

./: Makefile.am  Makefile.in  README  aclocal.m4  aminclude_static.am  ats-deptracking-rules.mk  config-status-deps.am  config.h.in  configure  configure.ac  list-ats-dependencies.dats.in  m4-rules.mk  string2stringmap_extern_inline.am  string2uintptrmap_extern_inline.am  stringset_extern_inline.am
ATTIC/: Makefile.in  ats-nodeptracking-rules.mk  ats2-hashmap.pc.in  configure.ac  m4-rules.mk
ATTIC/hashmap/CATS/: memory.cats.in  spinlock.cats.in
ATTIC/hashmap/DATS/: array-mapped-tree-create.dats  array-mapped-tree-free.dats  array-mapped-tree-get-entry.dats  array-mapped-tree-print-structure.dats  array-mapped-tree-print-subtree-structure.dats  array-mapped-tree-set-entry.dats  array-proofs.dats.in  atomic.dats.in  bits-source-TYPE-one-time.dats.m4.in  bits-source-size-one-time.dats.m4.in  bits-source-uint-one-time.dats.m4.in  bits-source-uint.dats.m4.in  bits-source-uint128.dats.m4.in  bits-source-uint16-one-time.dats.m4.in  bits-source-uint16.dats.m4.in  bits-source-uint32.dats.m4.in  bits-source-uint64-uint64.dats  bits-source-uintptr-one-time.dats.m4.in  bits-source-uintptr.dats.m4.in  bits-source-usint-one-time.dats.m4.in  bits-source-usint.dats.m4.in  hashmap.dats  memory.dats.in  print-bitmap.dats
ATTIC/hashmap/HATS/: bits-source-include.hats.in
ATTIC/hashmap/SATS/: array-mapped-tree-node-vt-free.sats  array-mapped-tree-print-subtree-structure.sats  array-mapped-tree-subtree-to-list-vt.sats  array-mapped-tree-templates.sats  array-proofs.sats.in  ctz.sats.in  initialize-once.sats.in  popcount.sats.in  print-bitmap.sats  strptr-map.sats  uptr.sats
ATTIC/tests/: test-2021-10-03-12-26-02.structure.reference.in  test-2021-10-05-01-01-01.structure.reference.in  test-bits-source-uint16.dats  test-bits-source-uint32.dats  test-bits-source-uint64-uint64.dats.in  test-bits-source-uint64.dats  test-bswap-on-big-endian.dats  test-uintptr-set.dats
hashmap/: bits_source.h.m4  string2stringmap.h  string2uintptrmap.h  stringset.h  uintptr2uintptrmap.h
hashmap/C/: uintptr2uintptrmap_extern_inline_del.c  uintptr2uintptrmap_extern_inline_free.c  uintptr2uintptrmap_extern_inline_is_empty.c  uintptr2uintptrmap_extern_inline_isnot_empty.c  uintptr2uintptrmap_extern_inline_keys.c  uintptr2uintptrmap_extern_inline_keys_free.c  uintptr2uintptrmap_extern_inline_pairs.c  uintptr2uintptrmap_extern_inline_pairs_free.c  uintptr2uintptrmap_extern_inline_set.c  uintptr2uintptrmap_extern_inline_size.c  uintptr2uintptrmap_extern_inline_uintptr2uintptrmap.c  uintptr2uintptrmap_extern_inline_values.c  uintptr2uintptrmap_extern_inline_values_free.c
hashmap/CATS/: atomic.cats  atomic.cats.in  bits-source.cats  bits_source.cats  const.cats.in  count-one-bits.cats  count-one-bits.cats.in  ctz.cats.in  memory.cats  memory.cats.in  node-alloc-count.cats  popcount.cats.in  spinlock.cats  uintptr-set-implementation.cats  uptr.cats
hashmap/DATS/: array-mapped-tree-create.dats  array-mapped-tree-free.dats  array-mapped-tree-get-entry.dats  array-mapped-tree-node-vt-free.dats  array-mapped-tree-print-structure.dats  array-mapped-tree-print-subtree-structure.dats  array-mapped-tree-set-entry.dats  array-mapped-tree-subtree-to-list-vt.dats  array-mapped-tree-templates.dats  array-mapped-tree-to-list-vt.dats  array-mapped-tree.dats  array-proofs.dats.in  array_prf.dats  atomic.dats  bits-source-TYPE-one-time.dats.m4.in  bits-source-UINTTYPE.dats.m4.in  bits-source-check-mask.dats  bits-source-size.dats.m4.in  bits-source-uint128-one-time.dats.m4.in  bits-source-uint128.dats.m4.in  bits-source-uint16.dats.m4.in  bits-source-uint32-one-time.dats.m4.in  bits-source-uint32.dats  bits-source-uint32.dats.m4.in  bits-source-uint64-one-time.dats.m4.in  bits-source-uint64-uint64-one-time.dats.m4.in  bits-source-uint64-uint64.dats  bits-source-uint64.dats.m4.in  bits-source-uint8-one-time.dats.m4.in  bits-source-uint8.dats.m4.in  bits-source-uintNN.dats.m4.in  bits-source-uintptr.dats  bits-source-uintptr.dats.m4.in  bits-source-ulint-one-time.dats.m4.in  bits-source-ulint.dats.m4.in  bits-source-ullint-one-time.dats.m4.in  bits-source-ullint.dats.m4.in  bits_source.dats  bits_source_UINTnn.dats.m4.in  (+75 more)
lib/: Makefile.am  Makefile.in
m4/: gnulib-cache.m4  gnulib-comp.m4
tests/: 2021.10.28.11.59.16.structure.reference.in  2021.10.28.12.10.38.structure.reference.in  2021.10.28.12.13.23.structure.reference.in  2021.10.28.15.41.28.structure.reference.in  2021.10.29.06.20.08.structure.reference.in  2021.10.29.06.31.29.structure.reference.in  2021.10.29.13.44.21.structure.reference.in  2021.10.29.13.58.50.structure.reference.in  2021.10.29.14.01.48.structure.reference.in  2021.10.29.14.02.11.structure.reference.in  2021.10.31.10.54.20.structure.reference.in  2021.10.31.11.39.37.structure.reference.in  2021.10.31.13.08.40.structure.reference.in  2021.10.31.13.19.39.structure.reference.in  2021.11.02.08.39.34.structure.reference.in  2021.11.02.09.07.40.structure.reference.in  2021.11.02.09.11.02.structure.reference.in  2021.11.02.09.17.00.structure.reference.in  2021.11.02.09.19.00.structure.reference.in  2021.11.04.12.03.51.structure.reference.in  2021.11.04.12.12.30.structure.reference.in  2021.11.04.12.17.00.structure.reference.in  2021.11.04.12.21.07.structure.reference.in  2021.11.04.12.49.55.structure.reference.in  2021.11.04.12.52.24.structure.reference.in  2021.11.04.12.56.31.structure.reference.in  2021.11.04.12.58.34.structure.reference.in  2021.11.04.13.01.28.structure.reference.in  2021.11.04.13.03.31.structure.reference.in  2021.11.04.15.37.36.structure.reference.in  2021.11.04.15.42.11.structure.reference.in  2021.11.04.15.45.14.structure.reference.in  2021.11.04.15.47.40.structure.reference.in  2021.11.04.15.49.22.structure.reference.in  2021.11.04.15.51.36.structure.reference.in  2021.11.05.08.58.41.structure.reference.in  2021.11.05.09.01.02.structure.reference.in  2021.11.05.09.06.12.structure.reference.in  2021.11.05.09.12.56.structure.reference.in  2021.11.05.09.19.41.structure.reference.in  (+71 more)
(+53 files in other folders)
